add job creation logic
